add table & form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,43 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <img src="images/r8_ultimate_schaft_hs_li_huntec.png" alt="kolba Blasera"/>
+        <h1>.Net Developer Sebastian Piątkowski</h1>
+        <p>Jestem .Net developerem specjalizującym się w tworzeniu aplikacji webowych z wykorzysywaniem web scrapowych technik</p>
+
+        <h3>Moje zalety</h3>
+        <ul>
+            <li>Punktualny</li>
+            <li>Pracowity</li>
+        </ul>
+        <h3>Moje wady</h3>
+        <ol>
+            <li>Brak wad</li>
+        </ol>
+
+        <table border="9" >
+            <tr>
+                <th>Ilosc</th>
+                <th>Kolor</th>
+                <th>Gęstość</th>
+            </tr>
+            <tr>
+                <td>12</td>
+                <td>Czerwony</td>
+                <td>0,343</td>
+            </tr>
+        </table>
+
+        <form>
+            <label for="name">Podaj swoje imie</label>
+            <input type="text" id="name" name="fistname">
+            <button type="reset">Resetuj</button>
+        </form>
+
+        <details>
+            <summary>Kliknij żeby rozwinąć</summary>
+            <p>Rozwinięty tekst</p>
+        </details>
+
+        <p>To jest <em>naprawdę</em> ważne</p>
     </body>
 </html>
